// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenomicCoordinates component renders on data 1`] = `
<DocumentFragment>
  <section
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="message message--info"
      role="status"
    >
      <div
        class="message__side-border"
      />
      <test-file-stub
        classname="message--icon-align-top"
        height="1.125em"
        width="1.125em"
      />
      <div
        class="message__title"
      >
        The content of this tab is in beta, feel free to 
        <a
          href="/contact"
        >
          get in touch
        </a>
         to provide feedback about it
      </div>
    </div>
    <section
      class="card"
    >
      <div
        class="card__container"
      >
        <div
          class="card__header card__header--with-separator"
        >
          <h3>
            Gene ENSG00000137575
          </h3>
        </div>
        <div
          class="card__content"
        >
          <ul
            class="info-list info-list--columns"
          >
            <li>
              <div
                class="decorated-list-item"
              >
                <div
                  class="decorated-list-item__title tiny"
                >
                  Chromosome
                </div>
                <div
                  class="decorated-list-item__content"
                >
                  8
                </div>
              </div>
            </li>
            <li>
              <div
                class="decorated-list-item"
              >
                <div
                  class="decorated-list-item__title tiny"
                >
                  Strand
                </div>
                <div
                  class="decorated-list-item__content"
                >
                  Forward
                </div>
              </div>
            </li>
            <li>
              <div
                class="decorated-list-item"
              >
                <div
                  class="decorated-list-item__title tiny"
                >
                  Ensembl gene ID
                </div>
                <div
                  class="decorated-list-item__content"
                >
                  <a
                    class="external-link"
                    href="https://www.ensembl.org/id/ENSG00000137575"
                    rel="noopener"
                    target="_blank"
                  >
                    ENSG00000137575
                    <test-file-stub
                      data-testid="external-link-icon"
                      width="12.5"
                    />
                  </a>
                </div>
              </div>
            </li>
          </ul>
          <section>
            <h4>
              Isoform: 
              <a
                href="/uniprotkb/O00560/entry"
              >
                O00560
              </a>
            </h4>
            <ul
              class="info-list info-list--columns"
            >
              <li>
                <div
                  class="decorated-list-item"
                >
                  <div
                    class="decorated-list-item__title tiny"
                  >
                    Genomic location
                  </div>
                  <div
                    class="decorated-list-item__content"
                  >
                    <a
                      class="external-link no-wrap"
                      href="https://www.ensembl.org/9606/Location/View?r=8:58565034-58581737"
                      rel="noopener"
                      target="_blank"
                    >
                      8:58,565,034 - 58,581,737
                      <test-file-stub
                        data-testid="external-link-icon"
                        width="12.5"
                      />
                    </a>
                  </div>
                </div>
              </li>
              <li>
                <div
                  class="decorated-list-item"
                >
                  <div
                    class="decorated-list-item__title tiny"
                  >
                    Number of exons
                  </div>
                  <div
                    class="decorated-list-item__content"
                  >
                    8
                  </div>
                </div>
              </li>
              <li>
                <div
                  class="decorated-list-item"
                >
                  <div
                    class="decorated-list-item__title tiny"
                  >
                    Ensembl translation IDs
                  </div>
                  <div
                    class="decorated-list-item__content"
                  >
                    <a
                      class="external-link"
                      href="https://www.ensembl.org/id/ENSP00000411771"
                      rel="noopener"
                      target="_blank"
                    >
                      ENSP00000411771
                      <test-file-stub
                        data-testid="external-link-icon"
                        width="12.5"
                      />
                    </a>
                     and 
                    <a
                      class="external-link"
                      href="https://www.ensembl.org/id/ENSP00000260130"
                      rel="noopener"
                      target="_blank"
                    >
                      ENSP00000260130
                      <test-file-stub
                        data-testid="external-link-icon"
                        width="12.5"
                      />
                    </a>
                  </div>
                </div>
              </li>
              <li>
                <div
                  class="decorated-list-item"
                >
                  <div
                    class="decorated-list-item__title tiny"
                  >
                    Ensembl transcript IDs
                  </div>
                  <div
                    class="decorated-list-item__content"
                  >
                    <a
                      class="external-link"
                      href="https://www.ensembl.org/id/ENST00000413219"
                      rel="noopener"
                      target="_blank"
                    >
                      ENST00000413219
                      <test-file-stub
                        data-testid="external-link-icon"
                        width="12.5"
                      />
                    </a>
                     and 
                    <a
                      class="external-link"
                      href="https://www.ensembl.org/id/ENST00000260130"
                      rel="noopener"
                      target="_blank"
                    >
                      ENST00000260130
                      <test-file-stub
                        data-testid="external-link-icon"
                        width="12.5"
                      />
                    </a>
                  </div>
                </div>
              </li>
            </ul>
          </section>
          <div
            class="datatable-wrapper"
          >
            <protvista-datatable
              expandtable=""
              filter-scroll="true"
            >
              <table
                class="table no-wrap"
              >
                <thead>
                  <tr>
                    <th>
                      Ensembl exon ID
                    </th>
                    <th>
                      Genomic coordinates
                    </th>
                    <th
                      title="Protein coordinates for O00560 mapping to specific exons. Click to view isoform"
                    >
                      <a
                        href="/uniprotkb/O00560/entry"
                      >
                        O00560
                      </a>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00001783349"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00001783349
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58565034-58565084"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,565,034 - 58,565,084
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      1 - 17
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00003587770"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00003587770
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58565034-58565084"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,565,034 - 58,565,084
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      1 - 17
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00003497476"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00003497476
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58570887-58570965"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,570,887 - 58,570,965
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      18 - 44
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00003592323"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00003592323
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58572205-58572314"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,572,205 - 58,572,314
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      44 - 80
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00003556973"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00003556973
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58575900-58576061"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,575,900 - 58,576,061
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      81 - 134
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00000928402"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00000928402
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58578033-58578208"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,578,033 - 58,578,208
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      135 - 193
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00000928403"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00000928403
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58579623-58579794"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,579,623 - 58,579,794
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      193 - 250
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00000928404"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00000928404
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58580517-58580608"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,580,517 - 58,580,608
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      251 - 281
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00002105837"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00002105837
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58581686-58581737"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,581,686 - 58,581,737
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      281 - 298
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/id/ENSE00002131120"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSE00002131120
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      <a
                        class="external-link"
                        href="https://www.ensembl.org/9606/Location/View?r=8:58581686-58581737"
                        rel="noopener"
                        target="_blank"
                      >
                        8:58,581,686 - 58,581,737
                        <test-file-stub
                          data-testid="external-link-icon"
                          width="12.5"
                        />
                      </a>
                    </td>
                    <td>
                      281 - 298
                    </td>
                  </tr>
                </tbody>
              </table>
            </protvista-datatable>
          </div>
        </div>
      </div>
    </section>
  </section>
</DocumentFragment>
`;

exports[`GenomicCoordinates component renders on error 1`] = `
<DocumentFragment>
  <div
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="error-page-container"
    >
      <img
        alt=""
        class="error-page-container__art-work"
        height="400"
        src="test-file-stub"
        width="400"
      />
      <div
        class="message message--failure"
        role="status"
      >
        <div
          class="message__side-border"
        />
        <test-file-stub
          classname="message--icon-align-top"
          height="1.125em"
          width="1.125em"
        />
        <div
          class="message__title"
        >
          <h4>
            This service is currently unavailable!
          </h4>
          <div>
            Please try again later
          </div>
          <small>
            We will reload this page for you in 5 seconds
          </small>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenomicCoordinates component renders on loading 1`] = `
<DocumentFragment>
  <div
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="loader-container"
    >
      <test-file-stub
        classname="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenomicCoordinates component renders on no data 1`] = `
<DocumentFragment>
  <section
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="no-data"
    >
      No genomic coordinate information available for O00560
    </div>
  </section>
</DocumentFragment>
`;
